@@ -80,8 +80,6 @@ class CJuiDatePicker extends CJuiInputWidget
 			$this->htmlOptions['id']=$id;
 		if(isset($this->htmlOptions['name']))
 			$name=$this->htmlOptions['name'];
-		else
-			$this->htmlOptions['name']=$name;
 
 		if ($this->flat===false)
 		{
@@ -107,8 +105,8 @@ class CJuiDatePicker extends CJuiInputWidget
 			if (!isset($this->options['onSelect']))
 				$this->options['onSelect']="js:function( selectedDate ) { jQuery('#{$id}').val(selectedDate);}";
 
-			$id = $this->htmlOptions['id'] = $this->htmlOptions['id'].'_container';
-			$this->htmlOptions['name'] = $this->htmlOptions['name'].'_container';
+			$id = $this->htmlOptions['id'] = $id.'_container';
+			$this->htmlOptions['name'] = $name.'_container';
 
 			echo CHtml::tag('div', $this->htmlOptions, '');
 		}
